		have to use icons
	Add isWhiteSpace check to BBCode converter to strip empty tags better
	Add unit test for above and for bbcodes with lots of white space, some with content and some without
	Add resize/expand to content option
	Improve custom BBCodes to support self-closing tags
	Improve newline handling for blocklevel tags which don't require a new line after them

Version 1.3.6:
	

Version 1.3.5:
	Fixed bug in FF making pasting via right click difficult when empty
		- Thanks to Nibogo2 for reporting
	Added readonly method and option
	Added expandToContent method
	Reorgernised themes to their own directory.
	Changed themes to be in .less format and added to build file
	Added modern, office-toolbar and office themes
	Added autofocus option
	Added a roadmap to the GitHub wiki
	Added height and width methods
	Added method to check for WYSIWYG support
	Changed so that by default the editor won't start in browsers
		that do not support WYSIWYG editing (old mobile browsers)
	Added rtl option along with rtl & ltr commands
	Added id option
	Added sourceMode, val, insertText and insert methods
	Fixed quote bug where author from nested quotes would be removed
	Added Estonian language file
		- Thanks to Rivo for translating
	Fixed bug with dom.fixNesting when fixing certain tags
	Improve adding/updating/removing of commands and BBCodes
	Fixed bug causing elements that are styled with diplay: block to be treated
		as block level elements
		- Thanks to Rene for reporting
	Added Brazilian Portuguese language file
		- Thanks to Martec for translating

Version 1.3.4:
	Updated focus method to work in source mode
	Added public inSourceMode method
	Fixed bug causing BBCodes to be striped
		- Thanks to Nibogo2 for reporting

Version 1.3.3:
	Added dropDownCss option, thanks to @esion
	Add txtExec option to setCommand function
	Updated BBCode plugin to support some BBCodes in source mode
	Updated editor to disable AYT emotion converstion if emotions is not in toolbar