@@ -1,0 +1,65 @@
+/**
+ * @author <Maxpower> <maxpowerid@gmail.com/www.identi.li>
+ * @license [MIT](http://www.opensource.org/licenses/mit-license.php)
+ */
+(function ($) {
+	'use strict';
+	
+	$.sceditor.locale["es"] = {
+		"Bold": "Negrita",
+		"Italic": "Cursiva",
+		"Underline": "Subrayar",
+		"Strikethrough": "Tachar",
+		"Subscript": "Sub\u00edndice",
+		"Superscript": "Super\u00edndice",
+		"Align left": "Alinear a la Izquierda",
+		"Center": "Centrar",
+		"Align right": "Alinear a la Derecha",
+		"Justify": "Justificar",
+		"Font Name": "Tipo de Letra",
+		"Font Size": "Tama\u00f1o de Letra",
+		"Font Color": "Color de Fuente",
+		"Remove Formatting": "Quitar Formatos",
+		"Cut": "Cortar",
+		"Your browser does not allow the cut command. Please use the keyboard shortcut Ctrl/Cmd-X": "Su navegador no acepta el comando cortar. Por favor, use la combinaci\u00f3n Ctrl/Cmd-X",
+		"Copy": "Copiar",
+		"Your browser does not allow the copy command. Please use the keyboard shortcut Ctrl/Cmd-C": "Su navegador no acepta el comando copiar. Por favor, use la combinaci\u00f3n Ctrl/Cmd-C",
+		"Paste": "Pegar",
+		"Your browser does not allow the paste command. Please use the keyboard shortcut Ctrl/Cmd-V": "Su navegador no acepta el comando cortar. Por favor, use la combinaci\u00f3n Ctrl/Cmd-V",
+		"Paste your text inside the following box:": "Pega el texto dentro del siguiente recuadro",
+		"Paste Text": "Pegar Texto",
+		"Bullet list": "Lista de Vi\u00f1etas",
+		"Numbered list": "Lista Numerada",
+		"Undo": "Deshacer",
+		"Redo": "Rehacer",
+		"Rows:": "Filas",
+		"Cols:": "Columnas",
+		"Insert a table": "Insertar una Tabla",
+		"Insert a horizontal rule": "Insertar una Regla Horizontal",
+		"Code": "C\u00f3digo",
+		"Width (optional):": "Ancho (Opcional)",
+		"Height (optional):": "Altura (Opcional)",
+		"Insert an image": "Insertar una Imagen",
+		"E-mail:": "E-mail",
+		"Insert an email": "Insertar un Email",
+		"URL:": "URL",
+		"Insert a link": "Insertar un V\u00ednculo",
+		"Unlink": "Quitar V\u00ednculo",
+		"More": "M\u00e1s",
+		"Insert an emoticon": "Insertar un emoticon",
+		"Video URL:": "URL del Video",
+		"Insert": "Insertar",
+		"Insert a YouTube video": "Insertar un video de YouTube",
+		"Insert current date": "Insertar fecha actual",
+		"Insert current time": "Insertar hora actual",
+		"Print": "Imprimir",
+		"View source": "Ver C\u00f3digo",
+		"Description (optional):": "Descripci\u00f3n (Opcional):",
+		"Enter the image URL:": "Ingresar la URL de la imagen:",
+		"Enter the e-mail address:": "Ingresar el correo electr\u00f3nico:",
+		"Enter the displayed text:": "Ingresar el texto mostrado:",
+		"Enter URL:": "Ingresar URL:",
+		"Enter the YouTube video URL or ID:": "Ingresar URL o ID de YouTube",
+		dateFormat: "day-month-year"
+	}
+})(jQuery);
